@@ -1,3 +1,13 @@
+2010-06-16  Anders Carlsson  <andersca@apple.com>
+
+        Fix build.
+
+        * NetscapeCoreAnimationMoviePlugin/main.m:
+        (NPP_New):
+        (NPP_WriteReady):
+        (NPP_Write):
+        (NPP_HandleEvent):
+
 2010-06-10  Anders Carlsson  <andersca@apple.com>
 
         Fix build.
